--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Belajar Git</title>
-    <link rel="stylesheet" href="style.css" />
+    <style>
+      h1 {
+        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+        font-size: 70px;
+        color: aqua;
+      }
+    </style>
   </head>
   <body>
     <h1>Hello World</h1>
